CSS fixes as per the following:
- Remove text labels 'Filters' and 'Timeframe' in top bar, and align search bar, buttons, filters and source menu, timeframe slider at top.
- Left align header with search bar and map below. Right now there's a white space on left edge of search bar and map. Same on right side so the white space is eliminated and is aligned with header.
- Add thin white line above tabs (Search Results, Add Relations, Add Place) so they are more distinct, same as thin white line between header and search bar.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -64,6 +64,7 @@ body {
 	color: #5682a5;
 	font-size: 14px;
 	line-height: 1.5;
+    overflow-y: scroll;
 }
 
 body, input {
@@ -308,7 +309,7 @@ textarea {
 
 #map {
 	position: fixed;
-	left: 10px;
+	left: 0px;
 	right: 50%;
 	top: 75px;
 	bottom: 10px;
@@ -463,13 +464,17 @@ input[type="text"], input[type="password"], input[type="submit"], .button, #plac
 }
 
 #dateInputBlock {
-	padding: 6px 16px;
+	padding: 13px 16px;
 }
 
 #dateInputBlock input {
     width: 44px;
     height: 22px;
     font-size: 80%;
+}
+
+.padding4.filterBlock {
+    padding-top: 8px;
 }
 
 #formFeature p {
@@ -593,7 +598,7 @@ input[type="submit"], .button {
 
 #siteHeader {
 	color: #fff;
-	padding: 5px 10px 4px 10px;
+	padding: 5px 0px 4px 0px;
 	font-family: 'LatoBold', sans-serif;
 	line-height: 1.35;
 	height: 32px;
@@ -1041,6 +1046,7 @@ border-color: transparent #061c3e #061c3e transparent;
 
     width: 50%;
     float: right;
+    border-top: 1px solid #9cb6d4;
 
 /*    z-index: 10000;*/
 }
